fix sponsor wrapping & facebook overflow

--- a/src/stylesheets/pages/_index.scss
+++ b/src/stylesheets/pages/_index.scss
@@ -41,7 +41,7 @@
   .sponsors-row {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
 
@@ -67,7 +67,6 @@
 }
 
 .home-social {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  overflow-x: scroll;
 }
